feat: 예약 존재 시 대기 추가 기능 구현