@@ -2,22 +2,25 @@ package roomescape.reservation.service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import roomescape.member.auth.vo.MemberInfo;
 import roomescape.reservation.controller.dto.AvailableReservationTimeWebResponse;
-import roomescape.reservation.controller.dto.CreateReservationByAdminWebRequest;
 import roomescape.reservation.controller.dto.CreateReservationWebRequest;
+import roomescape.reservation.controller.dto.CreateReservationWithMemberIdWebRequest;
 import roomescape.reservation.controller.dto.ReservationSearchWebRequest;
-import roomescape.reservation.controller.dto.ReservationStatus;
 import roomescape.reservation.controller.dto.ReservationWebResponse;
 import roomescape.reservation.controller.dto.ReservationWithStatusResponse;
 import roomescape.reservation.domain.ReservationDate;
 import roomescape.reservation.service.converter.ReservationConverter;
 import roomescape.reservation.service.dto.AvailableReservationTimeServiceRequest;
 import roomescape.reservation.service.dto.CreateReservationServiceRequest;
+import roomescape.reservation.service.dto.CreateReservationWithMemberIdServiceRequest;
 import roomescape.reservation.service.usecase.ReservationCommandUseCase;
 import roomescape.reservation.service.usecase.ReservationQueryUseCase;
+import roomescape.reservation.service.usecase.WaitingCommandUseCase;
+import roomescape.reservation.service.usecase.WaitingQueryUseCase;
 
 @Service
 @RequiredArgsConstructor
@@ -25,6 +28,8 @@ public class ReservationService {
 
     private final ReservationQueryUseCase reservationQueryUseCase;
     private final ReservationCommandUseCase reservationCommandUseCase;
+    private final WaitingCommandUseCase waitingCommandUseCase;
+    private final WaitingQueryUseCase waitingQueryUseCase;
 
     public List<ReservationWebResponse> getAll() {
         return ReservationConverter.toDto(
@@ -32,15 +37,16 @@ public class ReservationService {
     }
 
     public List<ReservationWithStatusResponse> getByMemberId(Long memberId) {
-        return reservationQueryUseCase.getByMemberId(memberId).stream()
-                .map(reservation -> new ReservationWithStatusResponse(
-                        reservation.getId(),
-                        reservation.getTheme().getName().getValue(),
-                        reservation.getDate().getValue(),
-                        reservation.getTime().getStartAt(),
-                        ReservationStatus.CONFIRM.getStatus()
-                ))
-                .toList();
+        List<ReservationWithStatusResponse> reservationWithStatusResponses = reservationQueryUseCase.getByMemberId(
+                        memberId).stream()
+                .map(ReservationConverter::toDtoWithStatus)
+                .collect(Collectors.toList());
+
+        waitingQueryUseCase.getByMemberId(memberId).stream()
+                .map(ReservationConverter::toDtoWithStatus)
+                .forEach(reservationWithStatusResponses::add);
+
+        return reservationWithStatusResponses;
     }
 
     public List<AvailableReservationTimeWebResponse> getAvailable(final LocalDate date, final Long id) {
@@ -53,25 +59,45 @@ public class ReservationService {
                 .toList();
     }
 
-    public ReservationWebResponse create(final CreateReservationByAdminWebRequest createReservationByAdminWebRequest) {
+    public ReservationWebResponse create(
+            final CreateReservationWithMemberIdWebRequest createReservationWithMemberIdWebRequest) {
         return ReservationConverter.toDto(
                 reservationCommandUseCase.create(
                         new CreateReservationServiceRequest(
-                                createReservationByAdminWebRequest.memberId(),
-                                createReservationByAdminWebRequest.date(),
-                                createReservationByAdminWebRequest.timeId(),
-                                createReservationByAdminWebRequest.themeId())));
+                                createReservationWithMemberIdWebRequest.memberId(),
+                                createReservationWithMemberIdWebRequest.date(),
+                                createReservationWithMemberIdWebRequest.timeId(),
+                                createReservationWithMemberIdWebRequest.themeId())));
     }
 
-    public ReservationWebResponse create(final CreateReservationWebRequest createReservationWebRequest,
-                                         final MemberInfo memberInfo) {
-        return ReservationConverter.toDto(
+    public ReservationWithStatusResponse create(final CreateReservationWebRequest createReservationWebRequest,
+                                                final MemberInfo memberInfo) {
+
+        if (reservationQueryUseCase.existsByParams(
+                ReservationDate.from(createReservationWebRequest.date()),
+                createReservationWebRequest.timeId(),
+                createReservationWebRequest.themeId())
+        ) {
+            return ReservationConverter.toDtoWithStatus(
+                    waitingCommandUseCase.create(
+                            new CreateReservationWithMemberIdServiceRequest(
+                                    memberInfo.id(),
+                                    createReservationWebRequest.date(),
+                                    createReservationWebRequest.timeId(),
+                                    createReservationWebRequest.themeId()
+                            )
+                    )
+            );
+        }
+
+        return ReservationConverter.toDtoWithStatus(
                 reservationCommandUseCase.create(
                         new CreateReservationServiceRequest(
                                 memberInfo.id(),
                                 createReservationWebRequest.date(),
                                 createReservationWebRequest.timeId(),
-                                createReservationWebRequest.themeId())));
+                                createReservationWebRequest.themeId()))
+        );
     }
 
     public void delete(final Long id) {
